<resources>
    <string name="app_name">FinTech</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>


    <!-- Strings related to bottom navigation -->
    <string name="account">Accounts</string>
    <string name="wallet">Wallet</string>
    <string name="bill">Bill</string>
    <string name="transaction">Transaction</string>
    <string name="trans">Transfer/Bill</string>
    <string name="rewards">Rewards</string>
    <string name="planner">Planner</string>
    <string name="logout">Logout</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for
        providing email completions."
    </string>
    <string name="sign_up_reminder">No account yet? Create one</string>
    <string name="prompt_forget_pwd">Forget password?</string>


    <!-- Strings related to register -->
    <string name="prompt_username">Username</string>
    <string name="prompt_back_to_login">Already a member? Login</string>


    <!-- Strings related to fingerprint scan -->
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(Fingerprint sign in makes your app login much faster. Your device should have at least one fingerprint registered in device settings)</string>


    <!-- Strings related to Transfer -->
    <string name="string_amount">Amount</string>
    <string name="string_comments">Comments</string>
    <string name="string_transfer">Transfer</string>
    <string name="error_empty_amount">Amount cannot be empty</string>
    <string name="error_amount">Amount is too high</string>
    <string name="string_succ_transac">Transaction Successful</string>
    <string name="string_receipent">Recipient</string>
    <string name="string_note">Note</string>
    <string name="string_btn_done">Done</string>
    <string-array name="categoryList">
        <item>Grocery</item>
        <item>Entertainment</item>
        <item>Dining</item>
        <item>Shopping</item>
        <item>Online Shopping</item>
        <item>Bills</item>
        <item>Petrol</item>
        <item>Investment</item>
        <item>Insurance</item>
        <item>Others</item>
    </string-array>


    <!-- Strings related to Bill Transfer History -->
    <string-array name="optionDate">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="optionView">
        <item>Payment</item>
        <item>Transaction</item>
        <item>Both</item>
    </string-array>


    <!-- Strings related to Bank Fragment-->
    <string name="string_add_account">Add an account</string>
    <string name="string_accountNum">Account Number</string>
    <string-array name="accountType">
        <item>Curent Accounts</item>
        <item>Savings Accounts</item>
        <item>Fixed Deposit Accounts</item>
    </string-array>
    <string-array name="listOfBank">
        <item>DBS Bank Limited</item>
        <item>POSB Bank</item>
        <item>UOB Singapore</item>
        <item>Citibank Singapore</item>
        <item>Standard Chartered Singapore</item>
        <item>CIMB Bank Singapore</item>
        <item>RHB Singapore Bank</item>
        <item>HSBC Singapore</item>
        <item>Hong Leong Bank Berhad</item>
        <item>Oversea-Chinese Banking Corporation Limited (OCBC)</item>
        <item>Bank of China Limited</item>
    </string-array>


    <!-- Strings related to Wallet-->
    <string name="string_add_card">Add a card</string>
    <string name="string_scan">SCAN</string>
    <string name="string_dialog_title">Enter the OTP below</string>
    <string name="input_hint">OTP</string>
    <string name="input_positiveText">OK</string>
    <string name="input_negativeText">Cancel</string>


    <!-- Strings related to Planner-->
    <string name="string_header_planner">Total Spending of Category</string>


    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <!-- Strings related to Bill Scheduling -->
    <string name="payButton">Pay</string>
    <string name="schedule_for_payment">Schedule for Payment</string>
    <string name="billPayeeName"></string>
    <string name="billDate"></string>
    <string name="billDetails"></string>
    <string name="btn_selectTime">SELECT TIME</string>
    <string-array name="choiceType">
        <item>Current Bills</item>
        <item>Bills Schedule</item>
    </string-array>
</resources>
