<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_transac"
            android:icon="@drawable/ic_transaction_black_24dp"
            android:title="@string/transaction"/>

        <item
            android:id="@+id/action_bill"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/bill"/>

        <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/account"/>

        <item
            android:id="@+id/action_wallet"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/wallet"/>

        <item
            android:id="@+id/action_budget_planner"
            android:icon="@mipmap/ic_chart"
            android:title="@string/planner"/>

        <!--<<item-->
            <!--android:id="@+id/action_rewards"-->
            <!--android:icon="@mipmap/ic_present"-->
            <!--android:title="@string/rewards"/>-->

    </group>


</menu>

