<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20sp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/string_succ_transac"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_receipent"
        android:textSize="18sp"
        android:layout_below="@+id/tv_amount"
        android:layout_alignStart="@+id/tv_amount"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tv_payee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/string_note"
        android:textSize="18sp"
        android:layout_below="@+id/tv_payee_name"
        android:layout_alignStart="@+id/tv_note"/>

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/tv_payee_name"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_note"
        android:layout_below="@+id/tv_note"
        android:layout_marginTop="42dp"
        android:textColor="@color/white"
        android:text="@string/string_btn_done"/>


</RelativeLayout>
