<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="cards main container"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@id/billPayeeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="39dp"
                    android:layout_marginStart="39dp"
                    android:text="@string/billPayeeName"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="39dp"
                    android:layout_marginEnd="80dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/billDate" />


                <TextView
                    android:id="@+id/billDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignLeft="@id/billPayeeName"
                    android:layout_alignStart="@id/billPayeeName"
                    android:layout_below="@id/billPayeeName"
                    android:layout_gravity="bottom"
                    android:text="@string/billDetails"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>